<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp"

>

    <TextView
            android:text="@string/about_us_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="#34ace0"
    />


    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/backgrounds/scenic[6]"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:id="@+id/imageView2"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
    />

    <TextView
            android:text="@string/about_us_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            android:layout_weight="1"
    />


    <Button
            android:text="@string/about_us_button_exit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:layout_gravity="center"
            android:elevation="0dp"/>

</LinearLayout>
