<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   >
                                                   <!--tools:context=".view.MainActivity"-->



    <include
            android:id="@+id/mytoolbar"
            layout="@layout/toolbar"
    />


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="158dp"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp" android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/pic2"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline" app:layout_constraintGuide_begin="16dp"
                                                android:orientation="horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMassText" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:text="@string/inputWeightEU"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/et_mass" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/tvMassText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="Calculate"
            android:layout_width="345dp"
            android:layout_height="55dp"
            android:id="@+id/btn_calculate"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@+id/tvBmiResult"/>
    <TextView
            android:text="@string/inputHeightEU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:id="@+id/tvHeightText"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/et_mass"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/et_height" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHeightText" app:layout_constraintHorizontal_bias="0.0"
            android:inputType="number"/>
    <TextView
            android:layout_width="143dp"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tvBmiResult" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_height"
            android:gravity="center"
            android:textSize="20sp"
    />
    <Button
            android:text="@string/btn_learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_learn_more"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/tvBmiResult"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_height" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:layout_width="164dp"
            android:layout_height="65dp"
            android:id="@+id/tvBmiLevel" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvBmiResult" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:gravity="center"
    />
</android.support.constraint.ConstraintLayout>